--- a/.github/workflows/update_workflow.yml
+++ b/.github/workflows/update_workflow.yml
@@ -37,9 +37,12 @@ jobs:
           git clone https://github.com/Al4ise/Azule /opt/Azule
           sudo ln -s /opt/Azule/azule /usr/local/bin/azule
 
-      - name: Process Apps (Check, Download, Inject, Upload)
+      - name: Process Apps
         env:
           PIXELDRAIN_API_KEY: ${{ secrets.PIXELDRAIN_API_KEY }}
+          TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
+          TELEGRAM_API_HASH: ${{ secrets.TELEGRAM_API_HASH }}
+          TELEGRAM_SESSION: ${{ secrets.TELEGRAM_SESSION }}
           FORCE_UPDATE: ${{ inputs.force_update }}
         run: python scripts/process_apps.py
 
